@@ -1,132 +1,111 @@
 /*
- *
  * Daylight Chart
  * http://sualeh.github.io/DaylightChart
- * Copyright (c) 2007-2016, Sualeh Fatehi.
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
- *
+ * Copyright (c) 2007-2026, Sualeh Fatehi <sualeh@hotmail.com>.
+ * All rights reserved.
+ * SPDX-License-Identifier: EPL-2.0
  */
+
 package org.geoname.test;
 
-
-import static org.junit.Assert.assertEquals;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
 
 import java.io.IOException;
-import java.io.InputStream;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.nio.file.FileSystem;
+import java.nio.file.FileSystems;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Map;
 import java.util.logging.Handler;
 import java.util.logging.Logger;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipInputStream;
-
 import org.geoname.data.Location;
-import org.geoname.parser.DefaultTimezones;
 import org.geoname.parser.GNISFileParser;
 import org.geoname.parser.GNSCountryFileParser;
 import org.geoname.parser.ParserException;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.geoname.parser.resources.ResourceRef;
+import org.geoname.parser.resources.ResourceRefs;
+import org.geoname.timezones.DefaultTimezones;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
-public class TestGeoNameFiles
-{
+public class TestGeoNameFiles {
 
-  @BeforeClass
-  public static void turnOffLogs()
-  {
-    final Logger[] loggers = new Logger[] {
-                                            Logger
-                                              .getLogger(DefaultTimezones.class
-                                                .getName()),
-                                            Logger
-                                              .getLogger("org.geoname.parser.BaseDelimitedLocationsFileParser")
+  @BeforeAll
+  public static void turnOffLogs() {
+    final Logger[] loggers = {
+      Logger.getLogger(DefaultTimezones.class.getName()),
+      Logger.getLogger("org.geoname.parser.BaseDelimitedLocationsFileParser")
     };
-    for (Logger logger: loggers)
-    {
+    for (final Logger logger : loggers) {
       logger.setUseParentHandlers(false);
       final Handler[] handlers = logger.getHandlers();
-      for (final Handler handler: handlers)
-      {
+      for (final Handler handler : handlers) {
         logger.removeHandler(handler);
       }
     }
   }
 
   @Test
-  public void GNISUSStates()
-    throws ParserException, IOException
-  {
-    final String date = "20100607";
-    parseGNISUSStates("MA", date, 2422);
-    parseGNISUSStates("HI", date, 541);
+  public void GNISUSStates() throws ParserException, IOException, URISyntaxException {
+    parseGNISUSStates("MA", 364);
+    parseGNISUSStates("HI", 130);
   }
 
   @Test
-  public void GNSCountries()
-    throws ParserException, IOException
-  {
-    parseGNSCountryFile("uz.zip", 3756);
-    parseGNSCountryFile("lo.zip", 4969);
+  public void GNSCountries() throws ParserException, IOException, URISyntaxException {
+    parseGNSCountryFile("Uzbekistan.zip", 6392);
+    parseGNSCountryFile("Slovakia.zip", 4830);
   }
 
-  private void parseGNISUSStates(final String state,
-                                 final String date,
-                                 final int numLocations)
-                                   throws ParserException, IOException
-  {
-    final String filename = state + "_Features_" + date + ".zip";
-    Collection<Location> locations = new ArrayList<Location>();
+  private void parseGNISUSStates(final String state, final int numLocations)
+      throws ParserException, IOException, URISyntaxException {
+    final String filename = state + ".zip";
+    final URL zipUrl = this.getClass().getClassLoader().getResource(filename);
+    final Path zipPath = Path.of(zipUrl.toURI());
 
-    final InputStream dataStream = this.getClass().getClassLoader()
-      .getResourceAsStream(filename);
-    final ZipInputStream zis = new ZipInputStream(dataStream);
-    ZipEntry ze;
-    if ((ze = zis.getNextEntry()) != null)
-    {
-      final GNISFileParser parser = new GNISFileParser(zis);
-      locations = parser.parseLocations();
+    Collection<Location> locations = new ArrayList<>();
+    final String entryName = firstZipEntryName(zipPath);
+    if (entryName != null) {
+      final ResourceRef ref = ResourceRefs.ofZipEntry(zipPath, entryName);
+      locations = new GNISFileParser(ref).parseLocations();
     }
-    zis.close();
 
-    assertEquals(String.format("Number of locations in file %s:%s",
-                               filename,
-                               ze),
-                 numLocations, locations.size());
+    assertThat(
+        "Number of locations in file %s:%s".formatted(filename, entryName),
+        locations.size(),
+        is(numLocations));
   }
 
-  private void parseGNSCountryFile(final String filename,
-                                   final int numLocations)
-                                     throws ParserException, IOException
-  {
-    Collection<Location> locations = new ArrayList<Location>();
+  private void parseGNSCountryFile(final String filename, final int numLocations)
+      throws ParserException, IOException, URISyntaxException {
+    final URL zipUrl = this.getClass().getClassLoader().getResource(filename);
+    final Path zipPath = Path.of(zipUrl.toURI());
 
-    final InputStream dataStream = this.getClass().getClassLoader()
-      .getResourceAsStream(filename);
-    final ZipInputStream zis = new ZipInputStream(dataStream);
-    ZipEntry ze;
-    if ((ze = zis.getNextEntry()) != null)
-    {
-      final GNSCountryFileParser parser = new GNSCountryFileParser(zis);
-      locations = parser.parseLocations();
+    Collection<Location> locations = new ArrayList<>();
+    final String entryName = firstZipEntryName(zipPath);
+    if (entryName != null) {
+      final ResourceRef ref = ResourceRefs.ofZipEntry(zipPath, entryName);
+      locations = new GNSCountryFileParser(ref).parseLocations();
     }
-    zis.close();
 
-    assertEquals(String.format("Number of locations in file %s:%s",
-                               filename,
-                               ze),
-                 numLocations, locations.size());
+    assertThat(
+        "Number of locations in file %s:%s".formatted(filename, entryName),
+        locations.size(),
+        is(numLocations));
+  }
+
+  private static String firstZipEntryName(final Path zipPath) throws IOException {
+    try (FileSystem fs = FileSystems.newFileSystem(zipPath, Map.of())) {
+      return Files.walk(fs.getPath("/"))
+          .filter(Files::isRegularFile)
+          .findFirst()
+          .map(Path::toString)
+          .orElse(null);
+    }
   }
 }
